aligned the title to the center and fixed the buttons

--- a/styles/parent-Profile.css
+++ b/styles/parent-Profile.css
@@ -74,13 +74,20 @@ This file will contain the css files
   
   }
 
+  .form h1{
+    
+    right: 40px;
+    position: absolute;
+    top: 3px;
+  }
+
   label {
 
     position: absolute;
   
     transform: translateY(6px);
   
-    left: 1px;
+    left: 10px;
   
     color: rgb(73, 4, 70);
   
@@ -148,6 +155,64 @@ This file will contain the css files
   
     transition: border-color .25s ease, box-shadow .25s ease;
   
+  }
+
+  .button {
+
+    border: 0;
+  
+    outline: none;
+  
+    border-radius: 0;
+  
+    padding: 15px 0;
+  
+    font-size: 2rem;
+  
+    font-weight: 600;
+  
+    letter-spacing: .1em;
+  
+    background: 	rgb(128, 13, 194);
+  
+    color: #ffffff;
+  
+    transition: all 0.5s ease;
+  
+  }
+
+  .b1 
+  {
+    background: rgb(128, 13, 194);;
+
+
+
+    color: #ffffff;
+
+    margin-right: 0px;
+    margin-left: 20px;
+    margin-top: 20px;
+    padding-left: 0px;
+    border-left-width: 0px;
+  }  
+
+  .b2{
+    background: rgb(128, 13, 194);;
+
+    color: #ffffff;
+
+    margin-left: 150px;
+    margin-top: 20px;
+    border-left-width: 0px;
+  }
+
+
+  .form button{
+    width: 100px;
+    float: left;
+    left: 10px;
+    position: absolute;
+    display: inline-block;
   }
 
   
